# assignment_yarp-find-rgb

./: .gitpod.yml  CMakeLists.txt  README.md
app/scripts/: assignment_yarp-find-rgb-app.xml  assignment_yarp-find-rgb-system.xml
gazebo/models/assignment_yarp-find-rgb-world-interface/: model.config  model.urdf
gazebo/models/assignment_yarp-find-rgb-world-interface/conf/: worldInterface.ini
gazebo/worlds/: assignment_yarp-find-rgb.sdf
smoke-test/: CMakeLists.txt  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: ball.cpp  head.cpp
